@@ -1,0 +1,19 @@
+CipherImplementationType.cs
+CipherModePlus.cs
+ConfluentWaitHandle.cs
+Helpers.cs
+Program.cs
+SymmetricAlgorithmPlus.cs
+SymmetricTransform.cs
+Camellia/Camellia.cs
+Camellia/CamelliaManaged.cs
+Camellia/CamelliaTransform.cs
+Camellia/CamelliaTransform64LE.cs
+Camellia/CamelliaTransformBE.cs
+Camellia/CamelliaTransformLE.cs
+Properties/AssemblyInfo.cs
+Tests/CamelliaTest.cs
+Tests/ConfluentWaitHandleTest.cs
+Tests/DummyAlgorithm.cs
+Tests/SymmetricAlgorithmPlusTest.cs
+Tests/SymmetricAlgorithmTestBase.cs
