@@ -42,6 +42,8 @@
     <File name="./Tests/ConfluentWaitHandleTest.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tests/DummyAlgorithm.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tests/SymmetricAlgorithmPlusTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Tests/CamelliaTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Tests/SymmetricAlgorithmTestBase.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References />
 </Project>
