@@ -1,3 +1,8 @@
+2006-12-11  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* Makefile, SourceFiles: 更新時のみのビルドに対応
+	* openCrypto.NET.mdp, openCrypto.NET.csproj: 更新
+
 2006-12-10  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* Makefile:
